# playwright-pytest-allure-framework

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
pages/: __init__.py  example_page.py
testdata/: test_data.json
tests/: conftest.py  test_baidu.py  test_example.py  test_search.py
utils/: __init__.py  data_loader.py  helpers.py  reporter.py
